# growatt-rtu-broker

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
docker/: run_broker.sh
docs/: ROADMAP.md  ha_live_setup.md  live_log_analysis_plan.md
growatt_broker/: __init__.py  backend.py  broker.py  cli.py
growatt_broker/simulator/: __init__.py
scripts/: run-ha.sh
tests/: conftest.py  test_backend.py  test_broker_downstream_timeout.py  test_broker_utils.py  test_cli.py  test_modbus_simulator.py  test_simulator_register_reads.py
tools/: analyze_sniff_log.py  parse_live_log.py
