[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "growatt-rtu-broker"
version = "0.1.0"
description = "Man-in-the-middle broker for Growatt RS-485: multiplex ShineWiFi-X and Modbus-TCP to a single RTU master with pacing and logging"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Your Name" }
]
dependencies = [
  "pyserial>=3.5",
]

[project.urls]
Homepage = "https://github.com/yourname/growatt-rtu-broker"
Issues = "https://github.com/yourname/growatt-rtu-broker/issues"

[project.scripts]
growatt-broker = "growatt_broker.broker:main"
