[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "growatt-rtu-broker"
version = "0.1.0"
description = "Modbus Workbench prototype: bridge, sniff, and simulate Modbus RTU/TCP networks (initial focus on Growatt hardware)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Your Name" }
]
dependencies = [
  "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pre-commit",
  "ruff",
  "black",
]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[project.urls]
Homepage = "https://github.com/yourname/growatt-rtu-broker"
Issues = "https://github.com/yourname/growatt-rtu-broker/issues"

[project.scripts]
growatt-broker = "growatt_broker.broker:main"

[tool.pytest.ini_options]
addopts = "-q"

[tool.setuptools.package-data]
"growatt_broker.simulator" = ["*.json", "datasets/*.json"]
